# sqlalchemyseed

./: .codeclimate.yml  .coveragerc  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.md  codecov.yml  db.py  main.py  models.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sqlalchemyseed.ipynb  temp.json  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml  workflow.yml
docs/: api.rst  async.rst  cli.rst  conf.py  environment.yaml  examples.rst  fastapi.rst  index.rst  intro.rst  pytest.rst  requirements.txt  seeding.rst
docs-temp/: conf.py  index.rst
docs/_static/: .gitkeep
docs/source/: api.rst  conf.py  examples.rst  index.rst  intro.rst  relationships.rst  seeding.rst
docs/superpowers/plans/: 2026-07-04-pytest-plugin.md  2026-07-07-sqlmodel-fastapi-support.md  2026-07-07-validator-seeder-hardening.md
docs/superpowers/specs/: 2026-07-04-pytest-plugin-design.md  2026-07-07-sqlmodel-fastapi-support-design.md  2026-07-07-validator-seeder-hardening-design.md
sqlalchemyseed/: __init__.py  class_cluster.py  class_registry.py  errors.py  loader.py  schema.json  seeder.py  util.py  validator.py
sqlalchemyseed/_future/: seeder.py
sqlalchemyseed/res/: schema.json
src/sqlalchemyseed/: __init__.py  __main__.py  aio.py  attribute.py  class_registry.py  cli.py  constants.py  dynamic_seeder.py  errors.py  json.py  key_value.py  loader.py  pytest_plugin.py  seeder.py  util.py  validator.py
src/sqlalchemyseed/_future/: seeder.py
src/sqlalchemyseed/res/: schema.json
src/sqlalchemyseed/schemas/: parent.json  schema.json
tests/: _variables.py  constants.py  db.py  instances.py  main.py  models.py  scratch.py  sqlmodel_models.py  test.json  test_async_seeder.py  test_class_cluster.py  test_class_registry.py  test_cli.py  test_hybridseeder.py  test_json.py  test_loader.py  test_pytest_plugin.py  test_schema_alignment.py  test_schema_validator.py  test_seeder.py  test_seeder_strict.py  test_seeder_temp.py  test_sqlmodel.py  test_temp_seeder.py  test_util.py  test_validator.py
tests/relationships/: __init__.py  association_object.py  many_to_many.py  many_to_one.py  one_to_many.py  one_to_one.py
tests/res/: companies.csv  data.yaml
