[tool.poetry]
name = "sqlalchemyseed"
version = "2.0.0-dev0"
description = ""
authors = ["Jedy Matt Tabasco <jedymatt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4.36"
jsonschema = "^4.5.1"
PyYAML = {version = "^6.0", optional = true}

[tool.poetry.extras]
yaml = ["PyYAML"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
