[project]
name = "sqlalchemyseed"
description = "SQLAlchemy Seeder"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jedy Matt Tabasco", email = "hello@jedymatt.dev" },
]
keywords = ["sqlalchemy", "sqlmodel", "fastapi", "orm", "seed", "seeder", "json", "yaml"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "SQLAlchemy>=2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
yaml = [
    "PyYAML>=6.0",
]
async = [
    # Pulls greenlet, which backs AsyncSession.run_sync. You still need an
    # async driver of your own (e.g. aiosqlite, asyncpg).
    "SQLAlchemy[asyncio]>=2.0",
]

[project.scripts]
sqlalchemyseed = "sqlalchemyseed.cli:main"

[project.entry-points.pytest11]
sqlalchemyseed = "sqlalchemyseed.pytest_plugin"

[project.urls]
Homepage = "https://github.com/jedymatt/sqlalchemyseed"
Documentation = "https://sqlalchemyseed.readthedocs.io/"
Source = "https://github.com/jedymatt/sqlalchemyseed"
Tracker = "https://github.com/jedymatt/sqlalchemyseed/issues"

[dependency-groups]
dev = [
    # 9.0.3 fixes GHSA-6w46-j5rx-g56g (tmpdir handling); it needs Python >=3.10,
    # which is now the floor.
    "pytest>=9.0.3",
    "coverage>=6.2",
    "PyYAML>=6.0",
    # Async seeder tests: aiosqlite provides an async SQLite driver, greenlet
    # backs SQLAlchemy's AsyncSession.run_sync bridge.
    "aiosqlite>=0.19",
    "greenlet>=3.0",
]
# Kept out of `dev` so the min-deps CI job can exclude it: resolving sqlmodel
# under --resolution lowest-direct drags SQLAlchemy above 2.0.0 and the job
# would silently stop testing the declared floor. 0.0.22 is the oldest release
# that works at all against SQLAlchemy 2.0.x (0.0.14 imports TryCast, which
# SQLAlchemy 2.0.0 lacks).
sqlmodel = [
    "sqlmodel>=0.0.22",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "sqlalchemyseed.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sqlalchemyseed = ["res/*.json"]

[tool.uv]
default-groups = ["dev", "sqlmodel"]
