[metadata]
name = sqlalchemyseed
description = SQLAlchemy Seeder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jedymatt/sqlalchemyseed
author = Jedy Matt Tabasco
author_email= jedymatt@gmail.com
license = MIT
license_file = LICENSE
python_requires= >=3.6
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Source = https://github.com/jedymatt/sqlalchemyseed
    Tracker = https://github.com/jedymatt/sqlalchemyseed/issues
keywords = sqlalchemy, orm, seed, seeder, json, yaml