[metadata]
name = sqlalchemyseed
version = attr: sqlalchemyseed.__version__
description = SQLAlchemy Seeder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jedymatt/sqlalchemyseed
author = Jedy Matt Tabasco
author_email = jedymatt@gmail.com
license = MIT
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://sqlalchemyseed.readthedocs.io/
    Source = https://github.com/jedymatt/sqlalchemyseed
    Tracker = https://github.com/jedymatt/sqlalchemyseed/issues
keywords = sqlalchemy, orm, seed, seeder, json, yaml

[options]
packages = find:
package_dir =
    =src
install_requires =
    SQLAlchemy>=1.4
    dataclasses>=0.8; python_version == "3.6"
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
yaml =
    PyYAML>=5.4
dev =
    PyYAML>=5.4
    coverage>=6.2
    pytest
    pylint
    autopep8
